@startuml

class AccountStatusUI {
}

class Account {
profile : Profile
name : String
email : String
phone : String
photo : Photo
isActive : boolean
inactivateAccount()
}

class AccountStatusController {
accountList : AccountList
changeAccountStatus(email, inactive)
}

class "AccountList" {
accountList : AccountList
getAccount(email)
}

AccountStatusUI "1" o-- "1" AccountStatusController
AccountStatusController "1" ..> "1" Account
AccountStatusController "1" o-- "1  " "AccountList"
AccountList "1  " *-- "*" Account : has

@enduml